dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/definitions.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS(mkdir strstr)

AC_OUTPUT(Makefile)
